Allow to override build date with SOURCE_DATE_EPOCH
in order to make builds reproducible.
See https://reproducible-builds.org/ for why this is good
and https://reproducible-builds.org/specs/source-date-epoch/
for the definition of this variable.

Also consistently use ISO 8601 date format
to be understood everywhere.
Also use gmtime to be independent of timezone.

--- a/doc/SConscript
+++ b/doc/SConscript
@@ -131,8 +131,9 @@ if skip_doc:
     if not os.path.isdir(scdir):
         os.makedirs(scdir)
 
-    import datetime
-    today = datetime.date.today().strftime("%m/%d/%Y")
+    import time
+    today = time.strftime("%Y-%m-%d",
+        time.gmtime(int(os.environ.get('SOURCE_DATE_EPOCH', time.time()))))
     version = env.subst('$VERSION')
     for m in man_page_list:
         man, _ = os.path.splitext(m)
