--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,6 +1,12 @@
 image: Visual Studio 2017
 shallow_clone: true
 
+cache:
+  - downloads -> appveyor.yml
+  - '%LOCALAPPDATA%\pip\Cache'
+  - C:\ProgramData\chocolatey\bin -> appveyor.yml
+  - C:\ProgramData\chocolatey\lib -> appveyor.yml
+
 install:
   - "set PATH=%PYTHON%;%PYTHON%\\Scripts;C:\\cygwin64\\bin;C:\\msys64;%PATH%"
   - python --version
