--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -60,36 +60,14 @@ environment:
     - PYTHON: "C:\\Python37"
       BUILD_JOB_NUM: 4
 
-    # - PYTHON: "C:\\Python27-x64"
-    #   BUILD_JOB_NUM: 1
-    # - PYTHON: "C:\\Python27-x64"
-    #   BUILD_JOB_NUM: 2
-    # - PYTHON: "C:\\Python27-x64"
-    #   BUILD_JOB_NUM: 3
-    # - PYTHON: "C:\\Python27-x64"
-    #   BUILD_JOB_NUM: 4
-
-    # - PYTHON: "C:\\Python35-x64"
-    #   BUILD_JOB_NUM: 1
-    # - PYTHON: "C:\\Python35-x64"
-    #   BUILD_JOB_NUM: 2
-    # - PYTHON: "C:\\Python35-x64"
-    #   BUILD_JOB_NUM: 3
-    # - PYTHON: "C:\\Python35-x64"
-    #   BUILD_JOB_NUM: 4
-      
-    # - PYTHON: "C:\\Python36-x64"
-    #   BUILD_JOB_NUM: 1
-    # - PYTHON: "C:\\Python36-x64"
-    #   BUILD_JOB_NUM: 2
-    # - PYTHON: "C:\\Python36-x64"
-    #   BUILD_JOB_NUM: 3
-    # - PYTHON: "C:\\Python36-x64"
-    #   BUILD_JOB_NUM: 4
-
 build: off
+
+# Remove bogus xsltproc.exe from git install if it's there
+before_build:
+    - ps: Remove-Item  "C:\Program Files\Git\usr\bin\xsltproc.EXE" -ErrorAction Ignore
+
 build_script:
-  - cmd: python runtest.py -l -a > all_tests.txt 
+  - cmd: python runtest.py -l -a > all_tests.txt
   - ps: >-
       $TOTAL_BUILD_JOBS = 4;
       $Lines = (Get-Content all_tests.txt | Measure-Object -line).Lines;
