--- a/doc/SConscript
+++ b/doc/SConscript
@@ -574,7 +574,9 @@ else:
     e = os.path.join('#src', 'engine')
     manifest_in = File(os.path.join(e, 'MANIFEST.in')).rstr()
     sources = bootstrap.parseManifestLines(e, open(manifest_in).readlines())
-    sources = [x for x in sources if x.find('Platform') == -1]
+    
+    # Don't omit this as we need Platform.virtualenv for the examples to be run
+    # sources = [x for x in sources if x.find('Platform') == -1]
     sources = [x for x in sources if x.find('Tool') == -1]
     # XXX
     sources = [x for x in sources if x.find('Options') == -1]
