--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -125,6 +125,10 @@ build_script:
   - cmd: powershell -Command "& { if($env:COVERAGE -eq 1) { coverage run -p --rcfile=$($env:COVERAGE_PROCESS_START) runtest.py -f build_tests.txt} else { python runtest.py -j 2 -f build_tests.txt }; if($LastExitCode -eq 2 -Or $LastExitCode -eq 0) { $host.SetShouldExit(0 )} else {$host.SetShouldExit(1)}}"
 
 on_success:
-  - coverage combine
-  - coverage report
-  - coveralls --rcfile=$PWD/.coveragerc
+  - ps: |
+      if ($env:COVERAGE -eq 1)
+      {
+        coverage combine
+        coverage report
+        coveralls --rcfile=$PWD/.coveragerc
+      }
