--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,8 +10,9 @@ cache:
   - C:\ProgramData\chocolatey\lib -> appveyor.yml
 
 install:
-  - "set PATH=%PYTHON%;%PYTHON%\\Scripts;C:\\cygwin64\\bin;C:\\msys64;%PATH%"
   - python --version
+  - ps: $env:PYUSERBASEDIR = python -m site --user-base;
+  - "set PATH=%PYUSERBASEDIR%;%PYTHON%;%PYTHON%\\Scripts;C:\\cygwin64\\bin;C:\\msys64;%PATH%"
   - pip install --user -U pip setuptools wheel 
   - pip install --user -U pypiwin32 coverage coveralls
   - set STATIC_DEPS=true & pip install --user -U lxml
