--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,8 +11,11 @@ cache:
 
 install:
   - python --version
-  - ps: $env:PYUSERBASEDIR = python -m site --user-base;
-  - "set PATH=%PYUSERBASEDIR%;%PYTHON%;%PYTHON%\\Scripts;C:\\cygwin64\\bin;C:\\msys64;%PATH%"
+  - "set PATH=%PYTHON%;%PYTHON%\\Scripts;C:\\cygwin64\\bin;C:\\msys64;%PATH%"
+  - ps: >-
+      $env:PYUSERBASEDIR = python -m site --user-base;
+      [Environment]::SetEnvironmentVariable("Path", $env:Path + ";" + $env:PYUSERBASEDIR, [EnvironmentVariableTarget]::User)
+  - set
   - pip install --user -U pip setuptools wheel 
   - pip install --user -U pypiwin32 coverage coveralls
   - set STATIC_DEPS=true & pip install --user -U lxml
