[PR 3462] python two handle the json
reading the cache from the json file got us unicode when
running python2, and this broke certain tests when calling
subprocess.Popen:  TypeError, because all the environment
wasn't strings, some was unicode.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -25,7 +25,7 @@ install:
   - cmd: set STATIC_DEPS=true & C:\\%WINPYTHON%\\python.exe -m pip install -U --progress-bar off lxml
   # install 3rd party tools to test with
   - cmd: choco install --allow-empty-checksums dmd ldc swig vswhere xsltproc winflexbison
-  - cmd: set SCONS_CACHE_MSVC_CONFIG="true"
+  - cmd: set SCONS_CACHE_MSVC_CONFIG=true
   - cmd: set
 
   ### LINUX ###
