checker fixes: None, trailing ws, list init
checker-suggested fixes:
Mostly, fix remaining instances of comparing none without "is"
Some trailing whitespace on lines
A couple of instances of list init followed immediately by
several appends, turned into a single list init
Some double comparisons turned into a single expression

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/doc/SConscript
+++ b/doc/SConscript
@@ -525,7 +525,7 @@ if not epydoc_cli:
             # first arg is a list where can be names of python package dirs,
             # python files, object names or objects itself
             docindex = build_doc_index([str(src) for src in source])
-            if docindex == None:
+            if docindex is None:
                 return -1
 
             if env['EPYDOCFLAGS'] == '--html':
